# fastchat

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/fastchat-desktop/: Cargo.toml
apps/fastchat-desktop/src/: main.rs
benches/: README.md
crates/fastchat-core/: Cargo.toml
crates/fastchat-core/benches/: filter_engine.rs
crates/fastchat-core/src/: backlog.rs  config.rs  filter.rs  lib.rs  model.rs  replay.rs  store.rs
crates/fastchat-twitch/: Cargo.toml
crates/fastchat-twitch/src/: lib.rs
crates/fastchat-ui/: Cargo.toml
crates/fastchat-ui/src/: lib.rs
testdata/: replay_sample.jsonl
