[workspace]
members = [
    "apps/fastchat-desktop",
    "crates/fastchat-core",
    "crates/fastchat-twitch",
    "crates/fastchat-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Codex"]

[workspace.dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
directories-next = "2.0"
eframe = { version = "0.33.3" }
egui = "0.33.3"
image = "0.25"
lru = "0.12"
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
twitch-irc = { version = "5.0.1", features = ["transport-tcp-native-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
criterion = "0.7"
