[package]
name = "fastchat-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fastchat-core = { path = "../../crates/fastchat-core" }
fastchat-ui = { path = "../../crates/fastchat-ui" }
