[package]
name = "fastchat-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
directories-next.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "filter_engine"
harness = false
