[package]
name = "fastchat-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
egui.workspace = true
eframe.workspace = true
image.workspace = true
lru.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
fastchat-core = { path = "../fastchat-core" }
fastchat-twitch = { path = "../fastchat-twitch" }
